--- a/apis.html
+++ b/apis.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dustin Riley: SQL</title>
+    <title>Dustin Riley: APIs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,16 +17,17 @@
             <div id="dropdown">
                 <a href="./index.html"><li>PORTFOLIO</li></a>
                 <div id="dropdown-menu">
-                    <a href="./apis.html">APIS</a>
+                    <a href="./apis.html" class="active">APIS</a>
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
                     <a href="./javascript.html">JAVASCRIPT</a>
                     <a href="./htmlcss.html">HTML & CSS</a>
                     <a href="./php.html">PHP</a>
                     <a href="./python.html">PYTHON</a>
-                    <a href="./sql.html" class="active">SQL</a>
+                    <a href="./sql.html">SQL</a>
                     <a href="./datastructures.html">DATA STRUCTURES</a>
                     <a href="./assembly.html">ASSEMBLY</a>
+
                 </div>
             </div>
             <a href="./games.html"><li>GAMES</li></a>
@@ -39,7 +40,7 @@
         </ul>
     </nav>
     <div id="title">
-        <h1>SQL</h1>
+        <h1>RESTful APIs</h1>
         <table>
             <tr>
                 <th>Name</th>
@@ -47,24 +48,14 @@
                 <th>Preview</th>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">quotes API</a></td>
+                <td>PHP OOP REST API using postgreSQL</td>
+                <td><a href="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">states API</a></td>
+                <td>Node.js REST API using Express and MongoDB</td>
+                <td><a href="https://conscious-platinum-napkin.glitch.me" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
         </table>
     </div>
