--- a/assembly.html
+++ b/assembly.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dustin Riley: SQL</title>
+    <title>Dustin Riley: Assembly</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,9 +24,10 @@
                     <a href="./htmlcss.html">HTML & CSS</a>
                     <a href="./php.html">PHP</a>
                     <a href="./python.html">PYTHON</a>
-                    <a href="./sql.html" class="active">SQL</a>
+                    <a href="./sql.html">SQL</a>
                     <a href="./datastructures.html">DATA STRUCTURES</a>
-                    <a href="./assembly.html">ASSEMBLY</a>
+                    <a href="./assembly.html" class="active">ASSEMBLY</a>
+
                 </div>
             </div>
             <a href="./games.html"><li>GAMES</li></a>
@@ -39,7 +40,7 @@
         </ul>
     </nav>
     <div id="title">
-        <h1>SQL</h1>
+        <h1>32-bit Assembly</h1>
         <table>
             <tr>
                 <th>Name</th>
@@ -49,22 +50,32 @@
             <tr>
                 <td><a href="" target="_blank"></a></td>
                 <td></td>
-                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="" target="_blank"></a></td>
                 <td></td>
-                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="" target="_blank"></a></td>
                 <td></td>
-                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
                 <td><a href="" target="_blank"></a></td>
                 <td></td>
-                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="" target="_blank"></a></td>
+                <td></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="" target="_blank"></a></td>
+                <td></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
         </table>
     </div>
