--- a/python.html
+++ b/python.html
@@ -17,13 +17,16 @@
             <div id="dropdown">
                 <a href="./index.html"><li>PORTFOLIO</li></a>
                 <div id="dropdown-menu">
+                    <a href="./apis.html">APIS</a>
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
                     <a href="./javascript.html">JAVASCRIPT</a>
                     <a href="./htmlcss.html">HTML & CSS</a>
+                    <a href="./php.html">PHP</a>
                     <a href="./python.html" class="active">PYTHON</a>
                     <a href="./sql.html">SQL</a>
                     <a href="./datastructures.html">DATA STRUCTURES</a>
+                    <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
             <a href="./games.html"><li>GAMES</li></a>
