--- a/apis.html
+++ b/apis.html
@@ -48,12 +48,12 @@
                 <th>Preview</th>
             </tr>
             <tr>
-                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">quotes API</a></td>
+                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">Quotes API</a></td>
                 <td>PHP OOP REST API using postgreSQL</td>
                 <td><a href="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">states API</a></td>
+                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">States API</a></td>
                 <td>Node.js REST API using Express and MongoDB</td>
                 <td><a href="https://conscious-platinum-napkin.glitch.me" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
