--- a/python.html
+++ b/python.html
@@ -47,29 +47,34 @@
                 <th>Preview</th>
             </tr>
             <tr>
-                <td><a href="https://www.codingame.com/training/easy/onboarding" target="_blank">Onboarding</a></td>
-                <td>Compare distances return closest</td>
-                <td><a href="https://github.com/DustinBRiley/Python3/distance.py" target="_blank"><img src="./img/code/python/distance.gif" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/Python-1" target="_blank">Woodchuck</a></td>
+                <td>Type Casting</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="https://www.codingame.com/training/easy/power-of-thor-episode-1" target="_blank">Power of Thor - Episode 1</a></td>
-                <td>Compare values and return quickest path to object</td>
-                <td><a href="https://github.com/DustinBRiley/Python3/thor.py" target="_blank"><img src="./img/code/python/thor.gif" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/Python-2" target="_blank">Login</a></td>
+                <td>Conditionals, Loops, and Lists</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="https://www.codingame.com/training/easy/the-descent" target="_blank">The Descent</a></td>
-                <td>Compare heights and sort tallest to smallest in loop</td>
-                <td><a href="https://github.com/DustinBRiley/Python3/sortdesc.py" target="_blank"><img src="./img/code/python/sortdesc.gif" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/Python-3" target="_blank">Cars</a></td>
+                <td>Lists and Dictionaries</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="https://www.codingame.com/training/easy/mars-lander-episode-1" target="_blank">Mars Lander - Episode 1</a></td>
-                <td>Control the landers speed to land it safely</td>
-                <td><a href="https://github.com/DustinBRiley/Python3/marslander.py" target="_blank"><img src="./img/code/python/marslander.gif" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/Python-4" target="_blank">Story</a></td>
+                <td>Reading, Writing, and Editing files</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="https://www.codingame.com/training/easy/temperatures" target="_blank">Temperatures</a></td>
-                <td>Compare arrays in loops to find temperature closest to zero</td>
-                <td><a href="https://github.com/DustinBRiley/Python3/temp.py" target="_blank"><img src="./img/code/python/temps.gif" alt="Preview"></a></td>
+                <td><a href="https://github.com/DustinBRiley/Unicode-Memory" target="_blank">Memory</a></td>
+                <td>Unicode Memory Game (with bruteforce protection)</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Tkinter-Memory" target="_blank">Memory</a></td>
+                <td>Tkinter Memory Game (with bruteforce protection)</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
         </table>
     </div>
