--- a/apis.html
+++ b/apis.html
@@ -45,17 +45,100 @@
             <tr>
                 <th>Name</th>
                 <th>Description</th>
-                <th>Preview</th>
+                <th>URL</th>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">Quotes API</a></td>
-                <td>PHP OOP REST API using postgreSQL</td>
-                <td><a href="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td>
+                    PHP OOP REST API using PostgreSQL on Render.com<br>
+                    Responds to GET, POST, PUT, and DELETE requests<br>
+                    Can GET single quotes by ID, author, category, and author & category<br>
+                    Accepts JSON data only
+                </td>
+                <td>https://backendwebdev1midterm.dustinbriley.repl.co/</td>
             </tr>
             <tr>
                 <td><a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">States API</a></td>
-                <td>Node.js REST API using Express and MongoDB</td>
-                <td><a href="https://conscious-platinum-napkin.glitch.me" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                <td>MVC style Node.js REST API using Express, Mongoose, and MongoDB<br>
+                    Data also provided by JSON file<br>
+                    GET
+                    <table>
+                        <tr>
+                            <th>Request</th>
+                            <th>Response</th>
+                        </tr>
+                        <tr>
+                            <td>/states/</td>
+                            <td>All state data returned</td>
+                        </tr>
+                        <tr>
+                            <td>/states/?contig=true</td>
+                            <td>All state data for contiguous states (Not AK or HI)</td>
+                        </tr>
+                        <tr>
+                            <td>/states/?contig=false</td>
+                            <td>All state data for non-contiguous states (AK, HI)</td>
+                        </tr>
+                        <tr>
+                            <td>/states/:state</td>
+                            <td>All data for the state URL parameter</td>
+                        </tr>
+                        <tr>
+                            <td>/states/:state/funfact</td>
+                            <td>A random fun fact for the state URL parameter</td>
+                        </tr>
+                        <tr>
+                            <td>/states/:state/capital</td>
+                            <td>{ 'state': stateName, 'capital': capitalName }</td>
+                        </tr>
+                        <tr>
+                            <td>/states/:state/nickname</td>
+                            <td>{ 'state': stateName, 'nickname': nickname }</td>
+                        </tr>
+                        <tr>
+                            <td>/states/:state/population</td>
+                            <td>{ 'state': stateName, 'population': population }</td>
+                        </tr>
+                        <tr>
+                            <td>/states/:state/admission</td>
+                            <td>{ 'state': stateName, 'admitted': admissionDate }</td>
+                        </tr>
+                    </table>
+                    POST
+                    <table>
+                        <tr>
+                            <th>Request</th>
+                            <th>Response</th>
+                        </tr>
+                        <tr>
+                            <td>/states/:state/funfact</td>
+                            <td>The result received from MongoDB</td>
+                        </tr>
+                    </table>
+                    PATCH
+                    <table>
+                        <tr>
+                            <th>Request</th>
+                            <th>Response</th>
+                        </tr>
+                        <tr>
+                            <td>/states/:state/funfact</td>
+                            <td>The result received from MongoDB</td>
+                        </tr>
+                    </table>
+                    DELETE
+                    <table>
+                        <tr>
+                            <th>Request</th>
+                            <th>Response</th>
+                        </tr>
+                        <tr>
+                            <td>/states/:state/funfact</td>
+                            <td>The result received from MongoDB</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>https://conscious-platinum-napkin.glitch.me</td>
             </tr>
         </table>
     </div>
