--- a/apis.html
+++ b/apis.html
@@ -40,105 +40,157 @@
         </ul>
     </nav>
     <div id="title">
-        <h1>RESTful APIs</h1>
+        <h1>Quotes API</h1>
+        PHP OOP REST API using PostgreSQL on Render.com<br>
+        <a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">Github</a><br>
+        <a href="https://backendwebdev1midterm.dustinbriley.repl.co/api/" target="_blank">URL</a><br>
         <table>
             <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>URL</th>
+                <th>ROUTE</th>
+                <th>GET</th>
+                <th>POST</th>
+                <th>PUT</th>
+                <th>DELETE</th>
             </tr>
             <tr>
-                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">Quotes API</a></td>
-                <td>
-                    PHP OOP REST API using PostgreSQL on Render.com<br>
-                    Responds to GET, POST, PUT, and DELETE requests<br>
-                    Can GET single quotes by ID, author, category, and author & category<br>
-                    Accepts JSON data only
-                </td>
-                <td>https://backendwebdev1midterm.dustinbriley.repl.co/</td>
+                <td>/quotes/</td>
+                <td>All quotes are returned</td>
+                <td>created quote (id, quote, author_id, category_id)</td>
+                <td>updated quote (id, quote, author_id, category_id)</td>
+                <td>id of deleted quote</td>
             </tr>
             <tr>
-                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">States API</a></td>
-                <td>MVC style Node.js REST API using Express, Mongoose, and MongoDB<br>
-                    Data also provided by JSON file<br>
-                    GET
-                    <table>
-                        <tr>
-                            <th>Request</th>
-                            <th>Response</th>
-                        </tr>
-                        <tr>
-                            <td>/states/</td>
-                            <td>All state data returned</td>
-                        </tr>
-                        <tr>
-                            <td>/states/?contig=true</td>
-                            <td>All state data for contiguous states (Not AK or HI)</td>
-                        </tr>
-                        <tr>
-                            <td>/states/?contig=false</td>
-                            <td>All state data for non-contiguous states (AK, HI)</td>
-                        </tr>
-                        <tr>
-                            <td>/states/:state</td>
-                            <td>All data for the state URL parameter</td>
-                        </tr>
-                        <tr>
-                            <td>/states/:state/funfact</td>
-                            <td>A random fun fact for the state URL parameter</td>
-                        </tr>
-                        <tr>
-                            <td>/states/:state/capital</td>
-                            <td>{ 'state': stateName, 'capital': capitalName }</td>
-                        </tr>
-                        <tr>
-                            <td>/states/:state/nickname</td>
-                            <td>{ 'state': stateName, 'nickname': nickname }</td>
-                        </tr>
-                        <tr>
-                            <td>/states/:state/population</td>
-                            <td>{ 'state': stateName, 'population': population }</td>
-                        </tr>
-                        <tr>
-                            <td>/states/:state/admission</td>
-                            <td>{ 'state': stateName, 'admitted': admissionDate }</td>
-                        </tr>
-                    </table>
-                    POST
-                    <table>
-                        <tr>
-                            <th>Request</th>
-                            <th>Response</th>
-                        </tr>
-                        <tr>
-                            <td>/states/:state/funfact</td>
-                            <td>The result received from MongoDB</td>
-                        </tr>
-                    </table>
-                    PATCH
-                    <table>
-                        <tr>
-                            <th>Request</th>
-                            <th>Response</th>
-                        </tr>
-                        <tr>
-                            <td>/states/:state/funfact</td>
-                            <td>The result received from MongoDB</td>
-                        </tr>
-                    </table>
-                    DELETE
-                    <table>
-                        <tr>
-                            <th>Request</th>
-                            <th>Response</th>
-                        </tr>
-                        <tr>
-                            <td>/states/:state/funfact</td>
-                            <td>The result received from MongoDB</td>
-                        </tr>
-                    </table>
-                </td>
-                <td>https://conscious-platinum-napkin.glitch.me</td>
+                <td>/quotes/?id=4</td>
+                <td>The specific quote</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/quotes/?author_id=10</td>
+                <td>All quotes from author_id=10</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/quotes/?category_id=8</td>
+                <td>All quotes in category_id=8</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/quotes/?author_id=3&category_id=4</td>
+                <td>All quotes from authorId=3 that are in category_id=4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/authors/</td>
+                <td>All authors with their id</td>
+                <td>created author (id, author)</td>
+                <td>updated author (id, author)</td>
+                <td>id of deleted author</td>
+            </tr>
+            <tr>
+                <td>/authors/?id=5</td>
+                <td>The specific author with their id</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/categories/</td>
+                <td>All categories with their ids (id, category)</td>
+                <td>created category (id, category)</td>
+                <td>updated category (id, category)</td>
+                <td>id of deleted category</td>
+            </tr>
+            <tr>
+                <td>/categories/?id=7</td>
+                <td>The specific category with its id</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+        <h1>States API</h1>
+        MVC style Node.js REST API using Express, Mongoose, and MongoDB<br>
+        Data also provided by JSON file<br>
+        <a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">Github</a><br>
+        <a href="https://conscious-platinum-napkin.glitch.me" target="_blank">URL</a><br>
+        <table>
+            <tr>
+                <th>ROUTE</th>
+                <th>GET</th>
+                <th>POST</th>
+                <th>PATCH</th>
+                <th>DELETE</th>
+            </tr>
+            <tr>
+                <td>/states/</td>
+                <td>All state data returned</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/states/?contig=true</td>
+                <td>All state data for contiguous states (Not AK or HI)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/states/?contig=false</td>
+                <td>All state data for non-contiguous states (AK, HI)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/states/:state</td>
+                <td>All data for the state URL parameter</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/states/:state/funfact</td>
+                <td>A random fun fact for the state URL parameter</td>
+                <td>The result received from MongoDB</td>
+                <td>The result received from MongoDB</td>
+                <td>The result received from MongoDB</td>
+            </tr>
+            <tr>
+                <td>/states/:state/capital</td>
+                <td>{ 'state': stateName, 'capital': capitalName }</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/states/:state/nickname</td>
+                <td>{ 'state': stateName, 'nickname': nickname }</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/states/:state/population</td>
+                <td>{ 'state': stateName, 'population': population }</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>/states/:state/admission</td>
+                <td>{ 'state': stateName, 'admitted': admissionDate }</td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </table>
     </div>
