--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <div id="dropdown">
                 <a href="./index.html"><li class="active">PORTFOLIO</li></a>
                 <div id="dropdown-menu">
-                    <a href="./apis.html">APIS</a>
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
                     <a href="./javascript.html">JAVASCRIPT</a>
@@ -36,6 +35,7 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
+            <a href="./apis.html"><li>APIS</li></a>
             <a href="./games.html"><li>GAMES</li></a>
             <a href="./resume.html"><li>RESUME</li></a>
         </ul>
