--- a/assembly.html
+++ b/assembly.html
@@ -17,7 +17,6 @@
             <div id="dropdown">
                 <a href="./index.html"><li>PORTFOLIO</li></a>
                 <div id="dropdown-menu">
-                    <a href="./apis.html">APIS</a>
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
                     <a href="./javascript.html">JAVASCRIPT</a>
@@ -27,9 +26,9 @@
                     <a href="./sql.html">SQL</a>
                     <a href="./datastructures.html">DATA STRUCTURES</a>
                     <a href="./assembly.html" class="active">ASSEMBLY</a>
-
                 </div>
             </div>
+            <a href="./apis.html"><li>APIS</li></a>
             <a href="./games.html"><li>GAMES</li></a>
             <a href="./resume.html"><li>RESUME</li></a>
         </ul>
