--- a/datastructures.html
+++ b/datastructures.html
@@ -17,7 +17,6 @@
             <div id="dropdown">
                 <a href="./index.html"><li>PORTFOLIO</li></a>
                 <div id="dropdown-menu">
-                    <a href="./apis.html">APIS</a>
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
                     <a href="./javascript.html">JAVASCRIPT</a>
@@ -29,6 +28,7 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
+            <a href="./apis.html"><li>APIS</li></a>
             <a href="./games.html"><li>GAMES</li></a>
             <a href="./resume.html"><li>RESUME</li></a>
         </ul>
