--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,6 @@
             <div id="dropdown">
                 <a href="./index.html"><li>PORTFOLIO</li></a>
                 <div id="dropdown-menu">
-                    <a href="./apis.html">APIS</a>
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
                     <a href="./javascript.html">JAVASCRIPT</a>
@@ -29,6 +28,7 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
+            <a href="./apis.html"><li>APIS</li></a>
             <a href="./games.html"><li>GAMES</li></a>
             <a href="./resume.html"><li class="active">RESUME</li></a>
         </ul>
@@ -40,57 +40,41 @@
     </nav>
     <div id="res">
         <div>
-            <h2>Bachelor's Degree(Pursuing)</h2>
-            <h3>Computer Science</h3>
-            <p>Fort Hays State University</p>
+            <h2>Professional Summary</h2>
+            Higher-ranking university student, one year away from achieving a bachelor’s degree in computer science. Currently advancing on projects and video games to build a strong portfolio. Looking to launch a career in software development.
         </div>
         <div>
-            <a href="./img/certs/adegree.pdf" target="_blank"><h2>Associate's Degree</h2></a>
-            <h3>Computer Science</h3>
+            <h2>Education</h2>
+            <h3>Bachelor's Degree Computer Science(GPA 4.00)</h3>
+            <p>Fort Hays State University</p>
+            <h3>Relevant Coursework:</h3>
+            <p>Front-End Web Development (JavaScript), Web Development (HTML, CSS), Database Design (SQL), Data Structures (Java), Back-End Web Development (APIs, LAMPP (Linux, Apache, MySQL, PHP) stack, Node.js, NPM, CLI, MVC, Express.js, REST, MongoDB, PostgreSQL, MVC), Assembly Language (Assembly), Programming with Python (Python), Object Oriented Programming (OOP)</p>
+            <a href="./img/certs/adegree.pdf" target="_blank"><h3>Associate's Degree Computer Science(GPA 3.71)</h3></a>
             <p>Laramie County Community College</p>
+            <h3>Relevant Coursework:</h3>
+            <p>Computer Science 1 (Java), Computer Science 2 (C++), Public Speaking (communication), Technical Writing (communication), Accounting 1-3 (finance), Database Applications (Microsoft Access)</p>
         </div>
     </div>
     <div id="res">
-        <section>
-            <div>
-                <h2>Skills</h2>
-                <ul>
-                    <li><h3>Java|JavaFX</h3></li>
-                    <li><h3>C++|SFML</h3></li>
-                    <li><h3>Python3|GDScript</h3></li>
-                    <li><h3>JavaScript</h3></li>
-                    <li><h3>HTML5|CSS3</h3></li>
-                    <li><h3>SQL|ERDs</h3></li>
-                    <li><h3>Git|GitHub</h3></li>
-                </ul>
-            </div>
-            <div>
-                <h2>Certificates</h2>
-                <a href="./img/certs/DDcert.pdf" target="_blank"><h3>Oracle Database Design</h3></a>
-                <a href="./img/certs/SQLcert.pdf" target="_blank"><h3>Oracle Programming: SQL</h3></a>
-            </div>
-        </section>
-        <section>
-            <div>
-                <h2>Projects</h2>
-                <h3>Space Ace</h3>
-                <p>top-down space shooter<br>Made in Godot using GDScript</p>
-            </div>
-            <div>
-                <h2>Interests</h2>
-                <h3>Video Games</h3>
-                <p>Playing and creating</p>
-                <h3>Building Computers</h3>
-                <p>Built every family member's computer</p>
-            </div>
-            <div>
-                <h2>Awards</h2>
-                <a href="http://wctm-blog.blogspot.com/p/wolsborn-drazovich.html" target="_blank"><h3>Wolsborn-Drazovich Math Contest</h3></a>
-                <p>9-10th grade division: 3rd place</p>
-                <p>11-12th grade division: 3rd place</p>
-            </div>
-        </section>
-        <a id="dl" href="./img/certs/resume.pdf" target="_blank"><h1>Download</h1></a>
+        <div>
+            <h2>Projects</h2>
+            <h3>Space Ace</h3>
+            <p>Top-down space shooter made in GODOT(GDScript)</p>
+        </div>
+        <div>
+            <h2>Coding Languages</h2>
+            <p>Java, C++, HTML, CSS, JavaScript, Python, SQL, Assembly, PHP, GDScript</p>
+        </div>
+        <div>
+            <h2>Certificates</h2>
+            <a href="./img/certs/DDcert.pdf" target="_blank"><h3>Oracle Database Design</h3></a>
+            <a href="./img/certs/SQLcert.pdf" target="_blank"><h3>Oracle Programming: SQL</h3></a>
+        </div>
+        <div>
+            <h2>Skills</h2>
+            <p>Application Programming Interface (API), MongoDB, Mongoose, REST, RESTful API, Expressjs, Nodejs, Node Package Manager (NPM), Model View Controller (MVC), CRUD, Create, Read, Update, Delete, LAMPP, Linux, Apache, MySQL, PostgreSQL, Relational Database, Database Development, Database Design, Command Line Interface (CLI), Scrum Methodology, Agile, JavaFX, Simple and Fast Multimedia Library (SFML), Git, GitHub, Bash, PowerShell (PS), Command Prompt (CMD), Amazon Web Services (AWS), Maven, Subversion (SVN), Eclipse, Microsoft Visual Studio (VS), Visual Studio Code (VSC), Oracle, Software Development Life Cycle (SDLC), JSON, Microsoft Access, Microsoft Excel</p>
+        </div>
+        <a id="dl" href="./img/certs/DustinRileyResume.docx" target="_blank"><h1>Download</h1></a>
     </div>
 </body>
 </html>
