--- a/games.html
+++ b/games.html
@@ -41,9 +41,14 @@
     </nav>
     <div id="main">
         <section>
-            <div id="feat">
-                <iframe frameborder="0" src="https://itch.io/embed-upload/7070228?color=333333" allowfullscreen="" width="600" height="1044"><a href="https://dustinbriley.itch.io/space-ace-v3">Play Space Ace v3 on itch.io</a></iframe>
+            <div>
+                <iframe frameborder="0" src="https://itch.io/embed-upload/7070228?color=333333" allowfullscreen="" width="280" height="495"><a href="https://dustinbriley.itch.io/space-ace-v3">Play Space Ace v3 on itch.io</a></iframe>
                 <p>currently a work in progress in GODOT</p>
+            </div>
+            <div>
+                <a href="https://dustinbriley.itch.io/memory"><h2>Memory</h2></a>
+                <a href="https://dustinbriley.itch.io/memory"><img src="./games/Memory.PNG" alt="Memory"></a>
+                <a href="https://dustinbriley.itch.io/memory"><h2>Download</h2></a>
             </div>
             <div>
                 <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Space Ace v2</h2></a>
