--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <input type="checkbox" id="toggle">
     <label for="toggle" id="menu">MENU ≡</label>
     <label for="toggle" id="menuc">|-></label>
-    <div id="intro">
+    <div>
         <h1>Dustin Riley</h1>
         <h2>Jr. Software Developer</h2>
-        <h2>Game Developer</h2>
-        <a href="#main"><img src="./img/arrow.png" alt="arrow"></a>
     </div>
     <nav>
         <ul class="pages">
@@ -46,14 +44,6 @@
         </ul>
     </nav>
     <div id="main">
-        <div id="feat">
-            <a href="./games.html"><h2>GAMES</h2></a>
-            <ul>
-                <li><a href="./games.html"><img class="avoid" src="./games/avoidstatic.png" alt="Avoidance"></a></li>
-                <li><a href="./games.html"><img class="ssv3" src="./games/Capture.PNG" alt="Space Ace v3"></a></li>
-                <li><a href="./games.html"><img class="ssv2" src="./games/ssv2static.png" alt="Space Ace"></a></li>
-            </ul>
-        </div>
         <section>
             <div>
                 <h3><a href="./java.html">JAVA</a></h3>
