--- a/index.html
+++ b/index.html
@@ -58,12 +58,20 @@
                 <a href="./javascript.html"><img src="./img/js.png" alt="JavaScript"></a>
             </div>
             <div>
+                <h3><a href="./php.html"><h3>PHP</a></h3>
+                <a href="./php.html"><img src="./img/php.png" alt="PHP"></a>
+            </div>
+            <div>
                 <h3><a href="./htmlcss.html"><h3>HTML & CSS</a></h3>
                 <a href="./htmlcss.html"><img src="./img/htmlcss.png" alt="HTML/CSS"></a>
             </div>
             <div>
                 <h3><a href="./python.html"><h3>PYTHON</a></h3>
                 <a href="./python.html"><img src="./img/python.png" alt="Python"></a>
+            </div>
+            <div>
+                <h3><a href="./assembly.html"><h3>ASSEMBLY</a></h3>
+                <a href="./assembly.html"><img src="./img/asm.png" alt="Assembly"></a>
             </div>
         </section>
     </div>
