--- a/games.html
+++ b/games.html
@@ -45,22 +45,22 @@
                 <iframe frameborder="0" src="https://itch.io/embed-upload/7070228?color=333333" allowfullscreen="" width="280" height="495"><a href="https://dustinbriley.itch.io/space-ace-v3">Play Space Ace v3 on itch.io</a></iframe>
                 <p>currently a work in progress in GODOT</p>
             </div>
-            <div>
+            <div id="mem">
                 <a href="https://dustinbriley.itch.io/memory"><h2>Memory</h2></a>
                 <a href="https://dustinbriley.itch.io/memory"><img src="./games/Memory.PNG" alt="Memory"></a>
                 <a href="https://dustinbriley.itch.io/memory"><h2>Download</h2></a>
             </div>
-            <div>
+            <div id="sa2">
                 <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Space Ace v2</h2></a>
                 <a href="https://dustinbriley.itch.io/space-ace-v2"><img src="./games/ssv2.gif" alt="Space Ace v2"></a>
                 <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Download</h2></a>
             </div>
-            <div>
+            <div id="sa1">
                 <a href="https://dustinbriley.itch.io/space-ace-v1"><h2>Space Ace v1</h2></a>
                 <a href="https://dustinbriley.itch.io/space-ace-v1"><img src="./games/ssv1.gif" alt="Space Ace v1"></a>
                 <a href="https://dustinbriley.itch.io/space-ace-v1"><h2>Download</h2></a>
             </div>
-            <div>
+            <div id="av">
                 <a href="https://dustinbriley.itch.io/avoidance"><h2>Avoidance</h2></a>
                 <a href="https://dustinbriley.itch.io/avoidance"><img src="./games/avoid.gif" alt="Avoidance"></a>
                 <a href="https://dustinbriley.itch.io/avoidance"><h2>Download</h2></a>
