--- a/apis.html
+++ b/apis.html
@@ -28,7 +28,7 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
-            <a href="./apis.html" class="active"><li>APIS</li></a>
+            <a href="./apis.html"><li class="active">APIS</li></a>
             <a href="./games.html"><li>GAMES</li></a>
             <a href="./resume.html"><li>RESUME</li></a>
         </ul>
