--- a/php.html
+++ b/php.html
@@ -47,32 +47,27 @@
                 <th>Preview</th>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
+                <td><a href="https://github.com/DustinBRiley/PHP-1" target="_blank">Data Types</a></td>
                 <td></td>
                 <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
+                <td><a href="https://github.com/DustinBRiley/PHP-2" target="_blank">Conditionals, Loops, Arrays, Functions</a></td>
                 <td></td>
                 <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
+                <td><a href="https://github.com/DustinBRiley/PHP-3" target="_blank">Classes and Objects</a></td>
                 <td></td>
                 <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
+                <td><a href="https://github.com/DustinBRiley/PHP-4" target="_blank">PHP Classes, Objects, and JSON</a></td>
                 <td></td>
                 <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
             <tr>
-                <td><a href="" target="_blank"></a></td>
-                <td></td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="" target="_blank"></a></td>
+                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">PHP OOP REST API using PostgreSQL</a></td>
                 <td></td>
                 <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
